--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,17 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html {
-  @apply h-full;
+.theme-light {
+  --background: #f8f8f8;
+  --text: #313131;
 }
-body {
-  @apply h-full;
+.theme-dark {
+  --background: #313131;
+  --text: #f8f8f8;
 }
-div#__nuxt {
-  height: calc(100vh - 80px);
-}
-
-
-
